crates/embedded-bitmap-font-macros/tests/ui/old_bitmap_fonts_removed_fail.stderr
error[E0432]: unresolved import `embedded_bitmap_font_macros::bitmap_fonts`
 --> tests/ui/old_bitmap_fonts_removed_fail.rs:1:5
  |
1 | use embedded_bitmap_font_macros::bitmap_fonts;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `bitmap_fonts` in the root
