crates/embedded-bitmap-font-macros/tests/ui/old_bitmap_fonts_removed_fail.rs
use embedded_bitmap_font_macros::bitmap_fonts;

fn main() {
    let _ = bitmap_fonts;
}
